--- a/index.html
+++ b/index.html
@@ -6,263 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мем дня - MemeWiki</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-        }
-
-        .header {
-            background-color: #fff;
-            border-bottom: 2px solid #ddd;
-            padding: 15px 0;
-        }
-
-        .header h1 {
-            margin: 0;
-            font-size: 24px;
-        }
-
-        .nav-link {
-            color: #333;
-            text-decoration: none;
-            padding: 8px 15px;
-            display: inline-block;
-        }
-
-        .nav-link:hover {
-            background-color: #eee;
-        }
-
-        .nav-link.active {
-            font-weight: bold;
-            border-bottom: 2px solid #333;
-        }
-
-        .main-wrapper {
-            display: flex;
-            max-width: 1400px;
-            margin: 20px auto;
-            gap: 20px;
-            padding: 0 20px;
-        }
-
-        /* Левая колонка - Мем дня */
-        .sidebar {
-            width: 300px;
-            flex-shrink: 0;
-        }
-
-        .meme-of-day {
-            background-color: white;
-            border: 2px solid #333;
-            padding: 20px;
-            position: sticky;
-            top: 20px;
-        }
-
-        .meme-of-day h2 {
-            font-size: 20px;
-            margin: 0 0 15px 0;
-            text-align: center;
-            border-bottom: 2px solid #333;
-            padding-bottom: 10px;
-        }
-
-        .meme-of-day-image {
-            width: 100%;
-            border: 1px solid #ddd;
-            margin-bottom: 15px;
-            cursor: pointer;
-        }
-
-        .meme-of-day h3 {
-            font-size: 18px;
-            margin: 10px 0;
-        }
-
-        .meme-of-day p {
-            font-size: 14px;
-            line-height: 1.5;
-            color: #555;
-        }
-
-        .meme-of-day-category {
-            display: inline-block;
-            background-color: #333;
-            color: white;
-            padding: 3px 8px;
-            font-size: 12px;
-            margin-bottom: 10px;
-        }
-
-        /* Основная область - пул мемов */
-        .content-area {
-            flex: 1;
-        }
-
-        .page-header {
-            background-color: white;
-            border: 1px solid #ddd;
-            padding: 20px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .page-header h2 {
-            margin: 0 0 10px 0;
-            font-size: 24px;
-        }
-
-        .btn-random {
-            padding: 10px 25px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-        }
-
-        .btn-random:hover {
-            background-color: #0056b3;
-        }
-
-        .memes-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 20px;
-            display: none;
-        }
-
-        .meme-card {
-            background-color: white;
-            border: 1px solid #ddd;
-            padding: 15px;
-            cursor: pointer;
-            transition: border-color 0.2s;
-        }
-
-        .meme-card:hover {
-            border-color: #333;
-        }
-
-        .meme-card-image {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border: 1px solid #ddd;
-            margin-bottom: 10px;
-        }
-
-        .meme-card-title {
-            font-size: 16px;
-            font-weight: bold;
-            margin: 10px 0 5px 0;
-        }
-
-        .meme-card-category {
-            font-size: 12px;
-            color: #666;
-            display: inline-block;
-            background-color: #f0f0f0;
-            padding: 2px 6px;
-            margin-bottom: 5px;
-        }
-
-        .meme-card-description {
-            font-size: 13px;
-            color: #555;
-            line-height: 1.4;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-        }
-
-        .meme-card-stats {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-            padding-top: 10px;
-            border-top: 1px solid #eee;
-            font-size: 12px;
-            color: #666;
-        }
-
-        /* Модальное окно */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-        }
-
-        .modal-content {
-            position: relative;
-            margin: 50px auto;
-            max-width: 90%;
-            max-height: 90vh;
-        }
-
-        .modal-image {
-            width: 100%;
-            height: auto;
-        }
-
-        .modal-close {
-            position: absolute;
-            top: 10px;
-            right: 25px;
-            color: white;
-            font-size: 40px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .modal-title {
-            text-align: center;
-            color: white;
-            margin-bottom: 15px;
-            font-size: 24px;
-        }
-
-        @media (max-width: 768px) {
-            .main-wrapper {
-                flex-direction: column;
-            }
-
-            .sidebar {
-                width: 100%;
-            }
-
-            .meme-of-day {
-                position: relative;
-            }
-
-            .memes-grid {
-                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Шапка -->
     <div class="header">
         <div class="container">
+            <div class="theme-toggle">
+                <button id="themeToggle" title="Переключить тему">🌙</button>
+            </div>
             <h1>MemeWiki</h1>
-            <nav>
-                <a href="index.html" class="nav-link">Главная</a>
-                <a href="random-meme.html" class="nav-link active">Мем дня</a>
-                <a href="quiz.html" class="nav-link">Тест</a>
-                <a href="gallery.html" class="nav-link">Галерея</a>
-                <a href="game.html" class="nav-link">Игра</a>
+            <nav class="navbar navbar-expand-lg border-bottom border-body my-navbar" data-bs-theme="light">
+                <div class="container-fluid">
+                    <a class="navbar-brand mb-0 h1" href="#">memewiki.
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" href=#>Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
+                            <li class="nav-item"><a class="nav-link" href=#>Random meme</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Game</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Test</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </div>
     </div>
@@ -338,8 +111,14 @@
                     </div>
                 </div>
             </div>
+            <footer class="mt-auto text-center py-1 my-footer">
+                <div class="container-fluid">
+                    <p>&copy; 2025 memewiki. All rights reserved.</p>
+                </div>
+            </footer>
         </main>
     </div>
+
 
     <!-- Модальное окно -->
     <div class="modal" id="imageModal">
@@ -357,8 +136,8 @@
             {
                 title: "Distracted Boyfriend",
                 image: "https://i.imgflip.com/1ur9b0.jpg",
-                description: "Классический мем о парне, который отвлекся на другую девушку, пока его девушка рядом. Используется для демонстрации предпочтений или выбора между двумя вариантами.",
-                category: "Классика",
+                description: "Classic meme about a guy who got distracted by another girl while his girlfriend is nearby. Used to demonstrate preferences or choices between two options.",
+                category: "Classic",
                 likes: 15420,
                 views: 98234,
                 shares: 3421
@@ -366,7 +145,7 @@
             {
                 title: "Mocking SpongeBob",
                 image: "https://i.imgflip.com/1otk96.jpg",
-                description: "SpongeBob с курицей на руке, используется для насмешливого повторения чьих-то слов. Текст обычно пишется в чередующемся регистре.",
+                description: "SpongeBob with a chicken on his hand, used for mockingly repeating someone's words. Text is usually written in alternating case.",
                 category: "SpongeBob",
                 likes: 23156,
                 views: 145678,
@@ -375,8 +154,8 @@
             {
                 title: "Woman Yelling at Cat",
                 image: "https://i.imgflip.com/345v97.jpg",
-                description: "Мем с кричащей женщиной слева и недовольным котом за столом справа. Используется для демонстрации конфликтных ситуаций или непонимания.",
-                category: "Животные",
+                description: "Meme with a screaming woman on the left and a displeased cat at the table on the right. Used to demonstrate conflict situations or misunderstandings.",
+                category: "Animals",
                 likes: 31245,
                 views: 187456,
                 shares: 6789
@@ -384,8 +163,8 @@
             {
                 title: "Drake Hotline Bling",
                 image: "https://i.imgflip.com/30b1gx.jpg",
-                description: "Drake отвергает что-то (верхняя панель) и одобряет другое (нижняя панель). Идеален для сравнения двух вариантов.",
-                category: "Музыка",
+                description: "Drake rejects something (top panel) and approves another (bottom panel). Ideal for comparing two options.",
+                category: "Music",
                 likes: 28934,
                 views: 156234,
                 shares: 4567
@@ -393,8 +172,8 @@
             {
                 title: "Change My Mind",
                 image: "https://i.imgflip.com/24y43o.jpg",
-                description: "Стивен Краудер сидит за столом с табличкой, приглашая изменить его мнение. Используется для провокационных утверждений.",
-                category: "Дебаты",
+                description: "Steven Crowder sitting at a table with a sign inviting to change his mind. Used for provocative statements.",
+                category: "Debates",
                 likes: 19876,
                 views: 123456,
                 shares: 3987
@@ -402,8 +181,8 @@
             {
                 title: "Bernie Sanders Mittens",
                 image: "https://upload.wikimedia.org/wikipedia/en/0/0f/Bernie_Sanders_mittens.jpg",
-                description: "Берни Сандерс сидит на инаугурации с варежками и скрещенными руками. Стал вирусным мемом в 2021 году.",
-                category: "Политика",
+                description: "Bernie Sanders sitting at the inauguration with mittens and crossed arms. Became a viral meme in 2021.",
+                category: "Politics",
                 likes: 42356,
                 views: 234567,
                 shares: 8765
@@ -411,8 +190,8 @@
             {
                 title: "Expanding Brain",
                 image: "https://i.imgflip.com/1jwhww.jpg",
-                description: "Четыре панели с увеличивающимся мозгом. Используется для показа прогрессии идей от простых к абсурдным.",
-                category: "Классика",
+                description: "Four panels with an expanding brain. Used to show progression of ideas from simple to absurd.",
+                category: "Classic",
                 likes: 18234,
                 views: 112345,
                 shares: 2876
@@ -420,8 +199,8 @@
             {
                 title: "Is This a Pigeon?",
                 image: "https://i.imgflip.com/1o00in.jpg",
-                description: "Персонаж аниме указывает на бабочку, спрашивая 'это голубь?'. Используется для неправильной идентификации вещей.",
-                category: "Аниме",
+                description: "Anime character pointing at a butterfly asking 'is this a pigeon?'. Used for incorrect identification of things.",
+                category: "Anime",
                 likes: 21456,
                 views: 134567,
                 shares: 4123
@@ -429,8 +208,8 @@
             {
                 title: "Two Buttons",
                 image: "https://i.imgflip.com/1g8my4.jpg",
-                description: "Человек потеет, не зная, какую из двух кнопок нажать. Показывает сложный выбор между двумя плохими вариантами.",
-                category: "Классика",
+                description: "Person sweating, not knowing which of two buttons to press. Shows a difficult choice between two bad options.",
+                category: "Classic",
                 likes: 16789,
                 views: 98765,
                 shares: 3012
@@ -438,8 +217,8 @@
             {
                 title: "Disaster Girl",
                 image: "https://i.imgflip.com/23ls.jpg",
-                description: "Девочка зловеще улыбается на фоне горящего дома. Используется для злорадства или саботажа.",
-                category: "Классика",
+                description: "Girl smiling sinisterly with a burning house in the background. Used for schadenfreude or sabotage.",
+                category: "Classic",
                 likes: 25678,
                 views: 167890,
                 shares: 5432
@@ -616,6 +395,36 @@
                     $btn.text('↗ Поделиться');
                 }, 2000);
             }
+        }
+        $(document).ready(function () {
+            // Загрузка сохраненной темы
+            const savedTheme = localStorage.getItem('theme') || 'light';
+            document.documentElement.setAttribute('data-theme', savedTheme);
+            updateThemeIcon(savedTheme);
+
+            // Переключение темы
+            $('#themeToggle').on('click', function () {
+                const currentTheme = document.documentElement.getAttribute('data-theme');
+                const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+                document.documentElement.setAttribute('data-theme', newTheme);
+                localStorage.setItem('theme', newTheme);
+                updateThemeIcon(newTheme);
+            });
+
+            $('#submitBtn').on('click', checkAnswer);
+            $('#skipBtn').on('click', skipQuestion);
+            $('#restartBtn').on('click', restartQuiz);
+
+            // Enter для отправки ответа
+            $('#answerInput').on('keypress', function (e) {
+                if (e.which === 13 && $('#submitBtn').is(':visible')) {
+                    checkAnswer();
+                }
+            });
+        });
+
+        function updateThemeIcon(theme) {
+            $('#themeToggle').text(theme === 'light' ? '🌙' : '☀️');
         }
     </script>
 </body>
